    (Sunil G via Stevel)

    YARN-4341. add doc about timeline performance tool usage (Chang Li via
    sjlee)

    YARN-4417. Make RM and Timeline-server REST APIs more consistent.
    (wtan via jianhe)

    YARN-3480. Remove attempts that are beyond max-attempt limit from state
    store. (Jun Gong via jianhe)

    YARN-4522. Queue acl can be checked at app submission. (Jian He via wangda)

  OPTIMIZATIONS

  BUG FIXES

    YARN-4109. Exception on RM scheduler page loading with labels. 
    (Mohammad Shahid Khan via rohithsharmaks)

    YARN-4156. TestAMRestart#testAMBlacklistPreventsRestartOnSameNode 
    assumes CapacityScheduler. (Anubhav Dhoot via kasha)

    YARN-2934. Improve handling of container's stderr.
    (Naganarasimha G R via gera)

>>>>>>> 8310b2e... YARN-4522. Queue acl can be checked at app submission. (Jian He via wangda)
Release 2.8.0 - UNRELEASED

  INCOMPATIBLE CHANGES

  NEW FEATURES

    YARN-3360. Add JMX metrics to TimelineDataManager (Jason Lowe via jeagles)

    YARN-3345. Add non-exclusive node label API. (Wangda Tan via jianhe)

    YARN-3365. Enhanced NodeManager to support using the 'tc' tool via
    container-executor for outbound network traffic control. (Sidharta Seethana
    via vinodkv)

    YARN-1376. NM need to notify the log aggregation status to RM through 
    heartbeat. (Xuan Gong via junping_du)

    YARN-3348. Add a 'yarn top' tool to help understand cluster usage. (Varun
    Vasudev via jianhe)

    YARN-3347. Improve YARN log command to get AMContainer logs as well as 
    running containers logs. (Xuan Gong via junping_du)

    YARN-3443. Create a 'ResourceHandler' subsystem to ease addition of support 
    for new resource types on the NM. (Sidharta Seethana via junping_du)

    YARN-3361. CapacityScheduler side changes to support non-exclusive node
    labels. (Wangda Tan via jianhe)

    YARN-3318. Create Initial OrderingPolicy Framework and FifoOrderingPolicy.
    (Craig Welch via wangda)
